Added tk colors as less variables.

--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,14 @@
 // Variables
 // --------------------------------------------------
 
+@tkFuksia:              #FF6699;
+@tkTaivas:              #00CCFF;
+@tkAurinko:             #FF9900;
+@tkLime:                #CCCC00;
+@tkMustikka:            #996699;
+@tkHiili:               #333333;
+@tkSavi:                #CCCCCC;
+@tkGoji:                #FF3333;
 
 // Global values
 // --------------------------------------------------
