--- a/less/buttons.less
+++ b/less/buttons.less
@@ -218,7 +218,7 @@ input[type="submit"].btn {
 .btn-link:hover,
 .btn-link:focus {
   color: @linkColorHover;
-  text-decoration: underline;
+  text-decoration: none;
   background-color: transparent;
 }
 .btn-link[disabled]:hover,
