--- a/less/variables.less
+++ b/less/variables.less
@@ -46,8 +46,9 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColor:             @tkFuksia;
+@linkColorHover:        @tkMustikka;
+//@linkColorHover:        darken(@linkColor, 15%);
 
 
 // Typography
