Fixed bootstrap icons paths and added tk-symbols path.

--- a/less/variables.less
+++ b/less/variables.less
@@ -163,9 +163,12 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "/files/bootstrap-theme/i/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/files/bootstrap-theme/i/glyphicons-halflings-white.png";
 
+// Tk symbol path
+// -------------------------
+@tkSymbolPath:            "/files/bootstrap-theme/i/tk-symbols.png";
 
 // Input placeholder text color
 // -------------------------
