Added tk icon positions and sprite path.

--- a/less/sprites.less
+++ b/less/sprites.less
@@ -28,6 +28,18 @@
   margin-top: 1px;
 }
 
+[class^="icon-tk-"],
+[class*=" icon-tk-"] {
+  width:30px;
+  height:30px;
+  background-image: url("@{tkSymbolPath}") !important;
+}
+
+.icon-tk-euro             { background-position: -82px    -10px; }
+.icon-tk-percent          { background-position: -151px   -10px; }
+.icon-tk-savings          { background-position: -221px   -10px; }
+.icon-tk-clock            { background-position: -12px    -109px; }
+
 /* White icons with optional class, or on hover/focus/active states of certain elements */
 .icon-white,
 .nav-pills > .active > a > [class^="icon-"],
