Slightly improved tk button color.

--- a/less/variables.less
+++ b/less/variables.less
@@ -99,9 +99,10 @@
 @btnBackgroundHighlight:            darken(@white, 10%);
 @btnBorder:                         #ccc;
 
-@btnPrimaryBackground:              @tkTaivas;
+@btnPrimaryBackground:              lighten(@tkTaivas, 10%);
 //@btnPrimaryBackground:              @linkColor;
-@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
+@btnPrimaryBackgroundHighlight:     darken(@tkTaivas, 10%);
+//@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
