Warning color fixed.

--- a/less/variables.less
+++ b/less/variables.less
@@ -246,7 +246,8 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853;
+//@warningText:             #c09853;
+@warningText:             @tkGoji;
 @warningBackground:       #fcf8e3;
 @warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
