Added class for changing background color to tk variable.

--- a/less/variables.less
+++ b/less/variables.less
@@ -11,6 +11,14 @@
 @tkSavi:                #BDC6C3;
 @tkGoji:                #FF4337;
 
+//
+// Find better place for these
+// --------------------------------------------------
+
+.tk-bg-aurinko {
+  background-color:     @tkAurinko;
+}
+
 // Global values
 // --------------------------------------------------
 
