Take out font settings for label, input, button, select, label.

--- a/less/forms.less
+++ b/less/forms.less
@@ -37,7 +37,7 @@ legend {
 }
 
 // Set font for forms
-label,
+/*label,
 input,
 button,
 select,
@@ -50,7 +50,7 @@ select,
 textarea {
   font-family: @baseFontFamily; // And only set font-family here for those that need it (note the missing label element)
 }
-
+*/
 // Identify controls by their labels
 label {
   display: block;
